# aws-announcement-serverless-api

./: .gitignore  app.py  pyproject.toml  setup.py
announcement_app/: announcement_app_stack.py
deployment/components/aws_lambda/: construct.py  function.py
deployment/components/aws_lambda/handlers/: create_announcement.py  default.py  list_announcements.py
deployment/components/dynamodb/: table.py
deployment/settings/: base.py  dev.py  prod.py
deployment/stacks/: api_deployment.py  app.py  lambda.py
deployment/stacks/api/announcement/: resource.py
deployment/stacks/resources/announcement/: resource.py
